src/objects/Salesforce_Request__c.object
<CustomObject>
    <description>Captures all Salesforce related requests for fixes to bugs or requests for enhancements.</description>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>CreatedBy.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Salesforce_ID__c</fullName>
        <label>Activity Salesforce ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive Adjustment</fullName>
                </value>
                <value>
                    <fullName>Negative Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Category__c</fullName>
        <label>Admin Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access - Deactivated Employee</fullName>
                </value>
                <value>
                    <fullName>Access - Existing Employee</fullName>
                </value>
                <value>
                    <fullName>Access - New Employee</fullName>
                </value>
                <value>
                    <fullName>Access - Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Access - Role and Profile Permissions</fullName>
                </value>
                <value>
                    <fullName>Access - System (App)</fullName>
                </value>
                <value>
                    <fullName>Access - UAT/Pilot</fullName>
                </value>
                <value>
                    <fullName>Bugs and Issues - Error Messages</fullName>
                </value>
                <value>
                    <fullName>Bugs and Issues - Release Fixes</fullName>
                </value>
                <value>
                    <fullName>Bugs and Issues - ServiceDesk</fullName>
                </value>
                <value>
                    <fullName>Bugs and Issues - User Error</fullName>
                </value>
                <value>
                    <fullName>Dashboard - Change Existing</fullName>
                </value>
                <value>
                    <fullName>Dashboard - New</fullName>
                </value>
                <value>
                    <fullName>Data Fix</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Content</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Flows</fullName>
                </value>
                <value>
                    <fullName>Enhancement - List Views</fullName>
                </value>
                <value>
                    <fullName>Enhancement - New Fields</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Objects</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Page Layout</fullName>
                </value>
                <value>
                    <fullName>Enhancement - System (App)</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Workflows and Approval Processes</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - 3rd Party Applications</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - CRM Configuration/Development</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - Data Fix</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - Data Migration</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - Data Storage</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - Process Documentation</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - Salesforce1</fullName>
                </value>
                <value>
                    <fullName>Internal Improvements - SFDC Release Notification/Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Attachments</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Error Message</fullName>
                </value>
                <value>
                    <fullName>Knowledge Article</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_Value__c</fullName>
        <formula>CASE( Complexity__c ,&quot;Low&quot;, 5, &quot;Medium&quot;, 3, &quot;High&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Completion_Date__c</fullName>
        <description>The date which you need the request to be completed by</description>
        <inlineHelpText>The date which you need the request to be completed by</inlineHelpText>
        <label>Desired Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prod</fullName>
                    <default>true</default>
                    <label>Prod</label>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>IAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Burned_Hours__c</fullName>
        <label>Estimated Burned Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Contacted__c</fullName>
        <label>First Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intake_Status__c</fullName>
        <label>Intake Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Migrate</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Active Sprint</fullName>
                </value>
                <value>
                    <fullName>Form Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Matching_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Matching Activity</label>
        <referenceTo>Order_Matching_Activity__c</referenceTo>
        <relationshipLabel>Salesforce Requests</relationshipLabel>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For the requester to easily tie a salesforce request with the order in question</description>
        <label>Related Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Salesforce Requests</relationshipLabel>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_Value__c</fullName>
        <formula>CASE( Priority__c , &quot;Low&quot;, 2, &quot;Medium&quot;, 3, &quot;High&quot;, 4, &quot;Showstopper&quot;, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Showstopper</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Adjustment__c</fullName>
        <label>Reason for Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extended System Downtime</fullName>
                </value>
                <value>
                    <fullName>Integration Delay</fullName>
                </value>
                <value>
                    <fullName>Internet Downtime</fullName>
                </value>
                <value>
                    <fullName>New Bug Discovered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bugs_and_Enhancements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Bugs_and_Enhancements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Salesforce Requests</relationshipLabel>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Salesforce Requests</relationshipLabel>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Process__c</fullName>
        <description>Requires going thru release process</description>
        <label>Release Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Within_24_hours__c</fullName>
        <formula>IF(ISBLANK(First_Contacted__c),null,
IF(
CASE(MOD(DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
0,CASE(MOD(First_Contacted__c-CreatedDate,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1,CASE(MOD(First_Contacted__c-CreatedDate,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2,CASE(MOD(First_Contacted__c-CreatedDate,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3,CASE(MOD(First_Contacted__c-CreatedDate,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4,CASE(MOD(First_Contacted__c-CreatedDate,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5,CASE(MOD(First_Contacted__c-CreatedDate,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6,CASE(MOD(First_Contacted__c-CreatedDate,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999)+(FLOOR((First_Contacted__c- CreatedDate)/7)*5)&gt; 1, &quot;NO&quot;,&quot;YES&quot;))</formula>
        <label>Response Within 24 hours?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Launch_Date__c</fullName>
        <label>Scheduled Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>IF (Complexity_Value__c = 0 || Priority_Value__c = 0, -99, Complexity_Value__c  +  Priority_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If value is -99, Complexity and/or Priority is not populated.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Project Queue</fullName>
                </value>
                <value>
                    <fullName>In Servicedesk Queue</fullName>
                </value>
                <value>
                    <fullName>In TFS Queue</fullName>
                </value>
                <value>
                    <fullName>Ready for UAT</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>Waiting on Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Department__c</fullName>
        <label>Targeted Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Salesforce Team (Internal)</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_URL__c</fullName>
        <label>Ticket URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Sub_Category__c</fullName>
        <label>Type Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Missing Fields</fullName>
                </value>
                <value>
                    <fullName>Create User</fullName>
                </value>
                <value>
                    <fullName>Permissions/Privileges</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Scorecard</fullName>
                </value>
                <value>
                    <fullName>Missing Items</fullName>
                </value>
                <value>
                    <fullName>Error Messages</fullName>
                </value>
                <value>
                    <fullName>Queues</fullName>
                </value>
                <value>
                    <fullName>Fields</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Email Routing</fullName>
                </value>
                <value>
                    <fullName>Reports/Dashboard</fullName>
                </value>
                <value>
                    <fullName>Requirements/Functionality Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Administration Request</fullName>
                </value>
                <value>
                    <fullName>Bugs &amp; Issues</fullName>
                </value>
                <value>
                    <fullName>Enhancements &amp; Changes</fullName>
                </value>
                <value>
                    <fullName>Issues</fullName>
                </value>
                <value>
                    <fullName>New Features/improvements</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Working Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAT Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Affected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the main user that the request affects (if specific to one user)</description>
        <inlineHelpText>Select the main user that the request affects (if specific to one user)</inlineHelpText>
        <label>User Affected</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Assigned_Requests__c</fullName>
        <description>this field allows the user to view their assigned sfr list view from the assigned admin field.</description>
        <formula>if(Assigned_Administrator__c=$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Assigned Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V1_Story_Number__c</fullName>
        <description>Version One Story</description>
        <label>V1 Story Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Request</label>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed_Date__c</columns>
        <columns>Assigned_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Hold,Rejected,Cancelled,Completed</value>
        </filters>
        <label>SalesForce Requests - All Closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Salesforce_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed_Date__c</columns>
        <columns>Assigned_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Completed - Now Live,Cancelled</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Completed - Last 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>Salesforce_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed_Date__c</columns>
        <columns>Assigned_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Completed - This Week</label>
        <language>en_US</language>
        <sharedTo>
            <group>Salesforce_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completed_Date__c</columns>
        <columns>Assigned_Administrator__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Completed - Now Live</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created - Last 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>Salesforce_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Requests_Closed</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Assigned_Requests__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Cancelled,Completed</value>
        </filters>
        <label>My Assigned Requests - Closed</label>
        <language>en_US</language>
        <sharedTo>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Requests_Open</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Desired_Completion_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Assigned_Requests__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Cancelled,Completed</value>
        </filters>
        <label>My Assigned Requests - Open</label>
        <language>en_US</language>
        <sharedTo>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Salesforce_Requests_Closed</fullName>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_Administrator__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Cancelled,Completed</value>
        </filters>
        <label>My Salesforce Requests - Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Salesforce_Requests_Closed2days</fullName>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Assigned_Administrator__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled,Completed,Completed - Now Live,Rejected</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>My Salesforce Requests - Closed 7 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Salesforce_Requests_Open</fullName>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Assigned_Administrator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Cancelled,Completed</value>
        </filters>
        <label>My Salesforce Requests - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Requests_Closed</fullName>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_Administrator__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Cancelled,Completed</value>
        </filters>
        <label>My Submitted Requests - Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Requests_Open</fullName>
        <columns>Number__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Assigned_Administrator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Cancelled,Completed</value>
        </filters>
        <label>My Submitted Requests - Open</label>
        <language>en_US</language>
    </listViews>
</CustomObject>